# Lumidoc

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml
apps/server/: .dockerignore  .env.example  Dockerfile  Dockerfile.celery  README.md  docker-compose.dev.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
apps/server/app/: celery_app.py  main.py
apps/server/app/core/: config.py  events.py  exceptions.py  logging.py  security.py  telemetry.py
apps/server/app/db/: indexes.py  mongodb.py  redis_client.py
apps/server/app/integrations/: gemini_client.py  openai_client.py  openrouter_client.py  s3_client.py
apps/server/app/middleware/: auth.py  cors.py  error_handler.py  logging.py  rate_limit.py  request_id.py
apps/server/app/models/: base.py  conversation.py  file.py  message.py  summary.py  timestamp.py  user.py
apps/server/app/repositories/: base.py  conversation_repo.py  file_repo.py  message_repo.py  summary_repo.py  timestamp_repo.py  user_repo.py
apps/server/app/schemas/: chat.py  common.py  file.py  summary.py  timestamp.py  user.py
apps/server/app/services/: auth_service.py  chat_service.py  embedding_service.py  file_service.py  oauth_service.py  pdf_service.py  storage_service.py  summary_service.py  timestamp_service.py  transcription_service.py
apps/server/app/tasks/: _processor.py  _runner.py  generate_summary.py  generate_timestamps.py  process_audio.py  process_pdf.py  process_video.py  schedules.py
apps/server/app/utils/: datetime.py  files.py  text.py  validators.py
apps/server/app/workers/: __init__.py  celery_beat.py  celery_worker.py
apps/server/docs/ai/: MODULE_INDEX.md  auth.summary.md  chat.summary.md  files.summary.md  rag.summary.md
apps/server/nginx/: README.md
apps/server/scripts/: create_indexes.py  generate_keys.sh  migrate.py  seed.py
apps/server/tests/: conftest.py
apps/server/tests/e2e/: test_e2e.py
apps/server/tests/factories/: __init__.py
apps/server/tests/integration/: test_auth_flow.py  test_chat_flow.py  test_files_flow.py  test_security_hardening.py  test_summaries_timestamps.py
apps/server/tests/unit/: test_auth_service.py  test_chat_service.py  test_config.py  test_embedding_service.py  test_exceptions.py  test_file_service.py  test_models.py  test_pdf_service.py  test_schemas.py  (+7 more)
(+177 files in other folders)
