[tool.poetry]
name = "lumidoc-backend"
version = "1.0.0"
description = "AI-powered document and media chat backend"
authors = ["Lumidoc Team <team@lumidoc.io>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
motor = "^3.4.0"
pymongo = "^4.8.0"
redis = "^5.0.4"
celery = {extras = ["redis"], version = "^5.4.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"
authlib = "^1.3.0"
python-multipart = "^0.0.9"
itsdangerous = "^2.2.0"
httpx = "^0.27.0"
aiofiles = "^23.2.1"
openai = "^1.30.0"
langchain = "^0.2.0"
langchain-google-genai = "^1.0.10"
langchain-community = "^0.2.0"
google-generativeai = "^0.7.2"
llama-index = "^0.10.40"
faiss-cpu = "^1.8.0"
pinecone-client = "^4.1.0"
boto3 = "^1.34.0"
aioboto3 = "^12.4.0"
pymupdf = "^1.24.0"
pdfplumber = "^0.11.0"
python-magic = "^0.4.27"
structlog = "^24.1.0"
tenacity = "^8.3.0"
tiktoken = "^0.7.0"
numpy = "^1.26.0"
ffmpeg-python = "^0.2.0"
sse-starlette = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
mongomock-motor = "^0.0.29"
fakeredis = "^2.23.0"
ruff = "^0.4.4"
mypy = "^1.10.0"
types-redis = "^4.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/__init__.py",
    "*/migrations/*",
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 65
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
